--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,20 @@ target_link_libraries(tests
     ${Boost_LIBRARIES}
 )
 
+install(TARGETS allocator RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT baranovsky.s.a@gmail.com)
+
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+
+include(CPack)
+
 enable_testing()
 
 add_test(utest tests)
